# mlp-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verify_installable.yaml
data/png/: math equation code.txt  neural network_1.drawio
notebooks/: mlp.ipynb  mlp_scratch_numpy.ipynb
